draft of search form and setup of fetch api

--- a/fetch.html
+++ b/fetch.html
@@ -11,51 +11,82 @@
 
 	<body>
 
-
 		
 <!--	navbar  navbar-dark bg-dark-->
-		<nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand text-white" href="#">Fetch</a>
-   
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarText" aria-controls="#navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span> 
-      </button>
-      
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
-        		<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        		<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-      		</ul>
-			
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-</nav>
-<!--	center/background	-->
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div id="ctrcontainer">
-					<h1>Fetch</h1>
-					<h3>The Best Human-Canine Matching Service</h3>
-					<hr>
-					<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i>
-
-Get Started!
-					</button>
-				</div>
-				</div>
-			</div>
+	<nav class="navbar navbar-expand-lg navbar-dark">
+		<a class="navbar-brand text-white" href="#">Fetch</a>
+<!-- Collect the nav links, forms, and other content for toggling -->   
+		<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarText" aria-controls="#navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span> 
+		</button>
+		
+		<div class="collapse navbar-collapse" id="navbarText">
+			<ul class="navbar-nav mr-auto">
+<!-- Left side nav -->
+				<li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+			</ul>
+<!-- Right side nav -->
+			<ul class="nav navbar-nav navbar-right">
+				<li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+			</ul>
 		</div>
-				
+	</nav>
+<!--	Hero image	-->
+<div class="container-fluid">
+	<div class="row hero">
+		<div class="col-lg-12">
+			<div id="ctrcontainer">
+			<h1>Fetch</h1>
+			<h3>The Best Human-Canine Matching Service</h3>
+			<hr>
+			<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i>Get Started!
+			</button>
+		</div>
+		</div>
+	</div>    
+</div><!-- End hero container -->
+
+<!-- Section  -->
+<div class="srch-frm" id="search">
+	<p>Let us help you find your new best friend.</p>
+<!-- Search Form -->
+	<form>
+			<div class="form-group">
+				<label for="breeds">Example select</label>
+				<select class="form-control" id="breeds">
+					<option></option>
+				</select>
+			</div>
+<!-- Doggie Image -->
+			<div class="card" style="width: 18rem;">
+					<img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+					<div class="card-body">
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</div>
+<!-- Text Area -->
+			<div class="form-group">
+				<label for="exampleFormControlTextarea1">Example textarea</label>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</div>
+		</form>
+	</div>
+
+	<button type="submit" class="btn btn-secondary btn-sm">FETCH</button>
+
+<!-- Matches in your area -->
+<div class="matches">
+	<p>Matches in your area</p>
+
+</div>
+
+
+<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-
 
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"><script defer src="svg-with-js/js/fontawesome-all.js"></script>
@@ -63,19 +94,3 @@ Get Started!
 </html>
 
 
-<!-- 
-<span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> -->
-
-        <!-- <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-            </ul>
-          </li>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-        </ul> -->
